<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/loginFragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/loginFragment_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <LinearLayout
        android:id="@+id/loginFragment_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">


        <EditText
            android:id="@+id/loginFragment_email_edtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/loginFragment_password_edtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/wachtwoord"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <Button
            android:id="@+id/loginFragment_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    </LinearLayout>


    <TextView
        android:id="@+id/loginFragment_btn_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:fontFamily="@font/roboto_slab"
        android:textStyle="bold"
        android:text="@string/heeft_nog_geen_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_linear_layout"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/loginFragment_btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_slab"
        android:textColor="@color/main"
        android:layout_marginTop="16dp"
        android:text="@string/door_zonder_login"
        app:layout_constraintEnd_toEndOf="@+id/loginFragment_btn_create_acc"
        app:layout_constraintStart_toStartOf="@+id/loginFragment_btn_create_acc"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_btn_create_acc" />
</androidx.constraintlayout.widget.ConstraintLayout>