<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupActivity">

    <TextView
        android:id="@+id/tv_welkom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/welcome"
        android:textColor="@color/main"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/tv_welkom"
        android:layout_marginTop="12dp"
        android:src="@drawable/lijn"
        app:layout_constraintTop_toBottomOf="@+id/tv_welkom" />


    <TextView
        android:id="@+id/tv_kies_taal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welkom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/kies_taal"
        android:textColor="@color/standard"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_welkom"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="@+id/tv_welkom"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Spinner
        android:id="@+id/spinner_talen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_kies_taal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/tv_kies_taal"
        app:layout_constraintStart_toStartOf="@+id/tv_kies_taal"
        app:layout_constraintTop_toBottomOf="@+id/tv_kies_taal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/spinner_talen"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/lijn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_talen" />

    <TextView
        android:id="@+id/tv_voeg_vakken_toe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_talen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/kies_vakken"
        android:textColor="@color/standard"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtTxt_vaknaam"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_voeg_vakken_toe"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/standard"
        android:hint="@string/kies_vak_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_voeg_vakken_toe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lange_zin_startup"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_startup_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recycler_vakken" />

    <Button
        android:id="@+id/btn_add_vak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edtTxt_vaknaam"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/edtTxt_vaknaam"
        android:backgroundTint="@color/standard"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/voeg_vak_knop_tekst"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/edtTxt_vaknaam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtTxt_vaknaam"
        app:layout_constraintTop_toBottomOf="@+id/tv_voeg_vakken_toe" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="310dp"
        android:layout_height="260dp"
        android:layout_below="@+id/edtTxt_vaknaam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/stroke_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxt_vaknaam" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recycler_vakken"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_below="@+id/edtTxt_vaknaam"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />


    <Button
        android:id="@+id/btn_save_startup_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>